objects/DDS_Cloud_Constant__mdt.object
<CustomObject>
    <fields>
        <fullName>Offering__c</fullName>
        <description>What it Does? Stores the Offering Type
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                    <default>true</default>
                    <label>PureConnect Cloud</label>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What it Does? Stores the Type
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                    <default>true</default>
                    <label>Constant</label>
                </value>
                <value>
                    <fullName>Coefficient</fullName>
                </value>
                <value>
                    <fullName>Cluster Mapping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variable_Name__c</fullName>
        <description>What it Does? Stores the Variable Name
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Variable Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Value__c</fullName>
        <description>What it Does? Stores the Variable Value
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Variable Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>DDS Cloud Constant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Offering__c</columns>
        <columns>Type__c</columns>
        <columns>Variable_Name__c</columns>
        <columns>Variable_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>DDS Cloud Constants</pluralLabel>
</CustomObject>